🐛 Fix trello scrollbar

--- a/frontend/src/styles/TrelloIntegration.scss
+++ b/frontend/src/styles/TrelloIntegration.scss
@@ -2,6 +2,7 @@
 
 #homepage-trello {
   flex-grow: 1;
+  overflow-y: auto;
 }
 
 .trello-card {
